--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -37,7 +37,7 @@ body {
     --font-size-md: 1em;
     --font-size-5: 1.5em;
     --font-size-4: 1.8em;
-    --font-size-3: 2.1rem;
+    --font-size-3: 2.1em;
     --font-size-2: 2.5em;
     --font-size-1: 2.8em;
 
