--- a/views/partials/foot.liquid
+++ b/views/partials/foot.liquid
@@ -1,2 +1,52 @@
+<footer>
+    <div class="wrapper-footer">
+        <section class="about-footer">
+            <div class="wrapper-logo-footer">
+                <a class="logo" href="/"><img loading="lazy" src="/assets-amber/logo-avl.svg" width="150" height="50"
+                        alt="Back to homepage"></a>
+                <a class="logo" href="/"><img loading="lazy" src="/assets-amber/logo-kemenkes.avif" width="170"
+                        height="70" alt="Back to homepage"></a>
+            </div>
+            <h6>Oncollaboration</h6>
+            <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Enim ipsum non egestas; primis luctus cubilia. Donec
+                ut venenatis
+                finibus eu.</p>
+        </section>
+
+        <section class="navigation-footer">
+            <h6>Navigation</h6>
+            <ul>
+                <li><a href="/webinars">Webinars</a></li>
+                <li><a href="/contourings">Contourings</a></li>
+                <li><a href="/speakers">Speakers</a></li>
+                <li><a href="/profile">My profile</a></li>
+            </ul>
+        </section>
+
+        <section class="contact-footer">
+            <h6>Contact information</h6>
+            <ul>
+                <li><img src="/assets-amber/icon-map.svg" alt="">Indonesia & The Netherlands</li>
+                <li><a href="tel:020 512 9111"><img src="/assets-amber/icon-phone.svg" alt="">AVL: 020 512 9111 </a>
+                </li>
+                <li><a href="tel:1500-567"><img src="/assets-amber/icon-phone.svg" alt="">Kemenkes: 1500-567</a></li>
+            </ul>
+        </section>
+    </div>
+
+    <div class="divider-footer"></div>
+
+    <div class="legal-footer">
+        <p>© 2024 - Antoni van Leeuwenhoek</p>
+
+        <ul class="legal-links">
+            <li><a class="secondary-text" href="#">Disclaimer</a></li>
+            <li><a class="secondary-text" href="#">Privacy Statement</a></li>
+            <li><a class="secondary-text" href="#">Cookie Statement</a></li>
+        </ul>
+    </div>
+</footer>
+
 </body>
+
 </html>
