--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -35,6 +35,7 @@ body {
     --font-size-xs: 0.5em;
     --font-size-sm: 0.75em;
     --font-size-md: 1em;
+    --font-size-6: 1.1em;
     --font-size-5: 1.5em;
     --font-size-4: 1.8em;
     --font-size-3: 2.1em;
@@ -58,7 +59,7 @@ body {
 }
 
 /* MARK: TEXT DECO */
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, h6 {
     font-family: var(--header-font);
     margin: 0em 0em 1em 0em;
     padding: 0;
@@ -82,6 +83,10 @@ h1, h2, h3, h4, h5 {
 
     h5 {
         font-size: var(--font-size-5);
+    }
+
+    h6 {
+        font-size: var(--font-size-6);
     }
 
 p {
