--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -20,6 +20,15 @@
     <nav class="menu">
         <ul class="menu-items">
             <li class="menu-item">
+                <a href="/">
+                    <svg width="20" height="22" viewBox="0 0 20 22" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M2.63229 19.5328H6.79866V12.1339H13.4073V19.5328H17.5737V8.32672L10.103 2.69976L2.63229 8.32672V19.5328ZM0.764648 21.4004V7.39291L10.103 0.365234L19.4413 7.39291V21.4004H11.5397V14.0015H8.6663V21.4004H0.764648Z"
+                             />
+                    </svg>Home
+                </a>
+            </li>
+            <li class="menu-item">
                 <a href="/webinars">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px">
                             <path
@@ -36,7 +45,7 @@
                 </a>
             </li>
             <li>
-                <a href="/watchlist">
+                <a href="/speakers">
                         <svg width="24" height="24" viewBox="0 0 16 21" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M14 0C15.0833 0 16 0.902344 16 1.96875V21L8 16.4062L0 21V1.96875C0 0.902344 0.875 0 2 0H14ZM14 17.5957V2.21484C14 2.0918 13.875 1.96875 13.75 1.96875H2.25C2.08333 1.96875 2 2.0918 2 2.21484V17.5957L8 14.1504L14 17.5957Z">
