--- a/public/styles-amber/header.css
+++ b/public/styles-amber/header.css
@@ -2,7 +2,7 @@
     width: 100%;
     display: flex;
 
-    @media screen and (min-width: 920px) {
+    @media screen and (min-width: 1020px) {
         position: fixed;
         top: 0;
         background-color: var(--primary-dark);
@@ -15,7 +15,7 @@
     .logo-nav {
         display: none;
 
-        @media screen and (min-width: 920px) {
+        @media screen and (min-width: 1020px) {
             display: flex;
         }
     }
@@ -23,12 +23,12 @@
     .menu {
         position: fixed;
         bottom: 0;
-        background-color: #fff;
+        background-color: var(--primary-dark);
         border-radius: 1em 1em 0em 0em;
         width: 100%;
         padding: 1em;
 
-        @media screen and (min-width: 920px) {
+        @media screen and (min-width: 1020px) {
             position: unset;
             top: 0;
             bottom: unset;
@@ -41,7 +41,12 @@
             justify-content: space-between;
             align-items: center;
 
-            @media screen and (min-width: 920px) {
+            @media screen and (min-width: 720px) {
+                justify-content: center;
+                gap: 3em;
+            }
+
+            @media screen and (min-width: 1020px) {
                 justify-content: end;
                 gap: 3.5em;
             }
@@ -66,14 +71,18 @@
                     align-items: center;
                     font-size: 16px;
                     text-decoration: none;
-                    color: var(--primary-text);
+                    color: var(--secondary-text);
                     transition: 0.2s ease-in-out;
 
-                     &:hover svg path {
-                         fill: var(--primary-highlight);
-                     }
+                    svg path {
+                        fill: #fff;
+                    }
 
-                    @media screen and (min-width: 920px) {
+                    &:hover svg path {
+                        fill: var(--primary-highlight);
+                    }
+
+                    @media screen and (min-width: 1020px) {
                         color: var(--secondary-text);
                     }
 
@@ -83,14 +92,14 @@
                     }
 
                     svg {
-                        @media screen and (min-width: 920px) {
+                        @media screen and (min-width: 1020px) {
                             display: none;
                         }
                     }
                 }
 
                 .profile-link {
-                    @media screen and (min-width: 920px) {
+                    @media screen and (min-width: 1020px) {
                         background-color: var(--primary-highlight);
                         color: var(--primary-dark);
                         font-family: var(--font-paragraph);
@@ -116,13 +125,17 @@
                     }
 
                     svg {
-                        @media screen and (min-width: 920px) {
+                        @media screen and (min-width: 1020px) {
                             display: unset;
                         }
                     }
 
                     svg path {
-                        fill: var(--primary-dark);
+                        fill: #fff;
+
+                         @media screen and (min-width: 1020px) {
+                            fill: var(--primary-dark);
+                         }
                     }
                 }
             }
@@ -140,7 +153,7 @@
         align-items: center;
         border-radius: 0 0 1em 1em;
 
-        @media screen and (min-width: 920px) {
+        @media screen and (min-width: 1020px) {
             display: none;
         }
 
