--- a/views/webinars.liquid
+++ b/views/webinars.liquid
@@ -1,11 +1,86 @@
 {% render "partials/head.liquid" %}
 
+<section class="hero-webinars">
+
+    <ul class="breadcrumb-webinars">
+        <li><a href="/">Home</a></li>
+        <li><a href="/webinars">Webinaes</a></li>
+    </ul>
+
     <h1>Webinars</h1>
 
+    <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Enim ipsum non egestas; primis luctus cubilia. Donec ut
+        venenatis.
+        Lorem ipsum odor amet.</p>
+
+</section>
+
+<section class="webinars">
+    <h2>Filter</h2>
+
+    <form action="/webinars" method="GET">
+        <select name="category" id="category" class="filter-select">
+            <!-- Wanneer 'All' geselecteerd wordt en er is geen categorie geselecteerd of als de geselecteerde categorie een lege waarde heeft. -->
+            <option value="" {% if not selectedCategory or selectedCategory=="" %}selected{% endif %}>All</option>
+            {% for category in categories %}
+            <!-- Als de selectedCategory gelijk is aan de category.name selecteer dan de juiste categorie -->
+            <option value="{{ category.name }}" {% if selectedCategory==category.name %}selected{% endif %}>
+                {{ category.name }}
+            </option>
+            {% endfor %}
+        </select>
+
+        <select name="sort" class="filter-select">
+            <option value="new-old" {% if selectedSort=="new-old" %}selected{% endif %}>New to Old</option>
+            <option value="old-new" {% if selectedSort=="old-new" %}selected{% endif %}>Old to New</option>
+        </select>
+
+        <button type="submit">Filter webinars</button>
+    </form>
+</section>
+
+<section>
+    <h2>Results</h2>
+
     {% for webinar in webinars %}
-        <ul>
-            <li><a href="/webinars/{{ webinar.slug }}">{{ webinar.slug }}</a></li>
-        </ul>
+    <ul>
+        <li>
+            <article>
+                <div class="wrapper-card">
+                    <img class="banner" src="https://fdnd-agency.directus.app/assets/{{ webinar.thumbnail }}?width=450&height=338&fit=cover"
+                        alt="{{ webinar.title }}" width="350" height="300">
+                    <p class="duration">{{ webinar.duration }}</p>
+                    <form class="bookmark-webinar-form" method="POST" action="/webinars">
+                        <input type="hidden" name="textField" value="{{ webinar.id }}">
+                        <input type="hidden" name="forField" value="Bookmark webinar">
+                        <button class="bookmark-btn" type="submit">
+                            <img src="/assets-webinars/icon-bookmark.svg" width="15" height="15" alt="">
+                            <span>Add to bookmarks</span>
+                        </button>
+                    </form>
+                </div>
+
+                <section class="card-info">
+                    <ul class="categories">
+                        {% for categorie in webinar.categories %}
+                        <li class="category">
+                            <p class="category-label">{{ categorie.avl_categories_id.name }}</p>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                    <h3>{{ webinar.title | truncatewords: 8 }}</h3>
+                    <p class="speaker">
+                        {% for speaker in webinar.speakers %}
+                        {{ speaker.avl_speakers_id.fullname }}
+                        {% endfor %}
+                    </p>
+                    <a href="/webinars/{{ webinar.slug }}">View webinar <img src="/assets-webinars" alt=""></a>
+                </section>
+
+            </article>
+        </li>
+    </ul>
     {% endfor %}
+</section>
 
 {% render "partials/foot.liquid" %}
