home styling aangemaakt en achtergrond kleur toegevoegd #3

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -2,6 +2,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="styles/home.css">
 </head>
 
 <section class="home-main">
