--- a/views/speakers.liquid
+++ b/views/speakers.liquid
@@ -1,7 +1,7 @@
 {% render "partials/head.liquid" %}
     {% comment %} {% include "partials/header.liquid" %} {% endcomment %}
 
-    <main class="main-speakers">
+    <main class="main-speakers components-alignment-vertical">
         <section class="speakers-introduction">
             <div class="speakers-section-title">
                 <h1>Speakers</h1>
@@ -25,45 +25,47 @@
                         <option value="bookmarked-speakers">Bookmarked speakers</option>
                     </select>
                 </label>
-                <button type="submit" class="speakers-submit">Filter speakers</button>
+                <button type="submit" class="speakers-submit button-green">Filter speakers</button>
             </form>
         </section>
 
-        <section class="speakers-overview">
+        <section class="speakers-overview components-alignment-vertical">
             <div class="speakers-section-title">
                 <h2>All</h2> 
             </div>
 
-            <!-- Article voor elke speaker -->
-            {% for speaker in speakers %}
-                <article class="speaker-card">
-                    <div class="speaker-card-main">
-                        <div class="speaker-card-name-entitle">
-                            <h3>{{ speaker.fullname }}</h3>
-                            <p>{{ speaker.entitle }}</p>                       
+            <div class="speakers-container components-alignment-vertical">
+                <!-- Article voor elke speaker -->
+                {% for speaker in speakers %}
+                    <article class="speaker-card components-alignment-vertical">
+                        <div class="speaker-card-main components-alignment-horizontal">
+                            <div class="speaker-card-profile-picture">
+                                <img src="https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}" alt="" width="200" height="200" style="object-fit:cover;">
+                            </div>
+                            <div class="speaker-card-name-entitle">
+                                <h3>{{ speaker.fullname }}</h3>
+                                <p>{{ speaker.entitle }}</p>                       
+                            </div>
                         </div>
-                        <div class="speaker-card-profile-picture">
-                            <img src="https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}" alt="" width="200" height="200" style="object-fit:cover;">
+
+                        <div class="speaker-card-link">
+                            <a href="/speakers/{{ speaker.slug }}" class="components-alignment-horizontal">
+                                <span>View speaker</span>
+                                {% render "public/assets-speakers/arrow-right.liquid" %}
+                            </a>
                         </div>
-                    </div>
 
-                    <div class="speaker-card-link">
-                        <a href="/speakers/{{ speaker.slug }}">
-                            View speaker
-                            {% render "public/assets-speakers/arrow-right.liquid" %}
-                        </a>
-                    </div>
-
-                    <!-- Bookmark formulier -->
-                    <form method="post" class="speaker-bookmark">
-                        <input type="hidden" name="textField" value="{{ speaker.id }}">
-                        <button type="submit">
-                            <span>Bookmark speaker</span>
-                            {% render "public/assets-speakers/bookmark-icon.liquid" %}
-                        </button>
-                    </form>
-                </article>
-            {% endfor %}
+                        <!-- Bookmark formulier -->
+                        <form method="post" class="speaker-bookmark">
+                            <input type="hidden" name="textField" value="{{ speaker.id }}">
+                            <button type="submit" class="button-green button-speaker-bookmark components-alignment-horizontal">
+                                <span>Bookmark speaker</span>
+                                {% render "public/assets-speakers/bookmark-icon.liquid" %}
+                            </button>
+                        </form>
+                    </article>
+                {% endfor %}
+            </div>
         </section>
     </main>
 
