--- a/public/styles-speakers/speakers.css
+++ b/public/styles-speakers/speakers.css
@@ -19,6 +19,8 @@ button {
 }
 
 .button-speaker-bookmark {
+    filter: drop-shadow(0px 4px 8.4px #00000050);
+
     svg,path,circle {
         transition: .2s ease-in-out;
     }
