--- a/public/styles-speakers/speakers.css
+++ b/public/styles-speakers/speakers.css
@@ -43,6 +43,8 @@ button {
 /* MARK: Main */
 .main-speakers {
     gap: 2rem;
+    width: 85vw;
+    margin: 0 auto;
 }
 
 /* MARK: Speakers introduction */
@@ -59,14 +61,32 @@ button {
 
 /* MARK: Speakers filter */
 .speakers-sort-filter {
-    background-color: var(--secondary-light);
+    position: relative; 
     padding: 1rem 0;
+    width: 100%;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 50%;
+        translate: -50% 0;
+        width: 100vw;
+        height: 100%;
+        background-color: var(--secondary-light);
+        z-index: -1;
+
+        @media (min-width: 1000px) {
+            display: none; 
+        }
+    }
 
     h2 {
         margin-bottom: 1rem;
     }
 
     @media (min-width: 1000px) {
+        background-color: var(--secondary-light);
         padding: 1rem;
         max-width: max-content;
         border-radius: var(--border-radius-md);
