--- a/public/styles/speaker-detail.css/speaker-detail.css
+++ b/public/styles/speaker-detail.css/speaker-detail.css
@@ -1,11 +1,27 @@
+
 /* MARK: Speakers detail pagina */
 .speaker-main {
     gap: 2rem;
+    width: 85vw;
+    margin: 0 auto;
 }
 
 .speaker-introduction {
-    background-color: var(--secondary-light);
     padding: 0 0 2rem 0;
+    position: relative; 
+    width: 100%;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 50%;
+        translate: -50% 0;
+        width: 100vw;
+        height: 100%;
+        background-color: var(--secondary-light);
+        z-index: -1;
+    }
 
     @media (min-width: 1000px) {
         .speaker-introduction {
