--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -6,5 +6,6 @@
     <title>Oncollaboration</title>
     <link rel="stylesheet" href="/styles/stylesheet.css">
     <link rel="stylesheet" href="/styles-speakers/speakers.css">
+    <link rel="stylesheet" href="/styles-speakers/speaker-detail.css">
 </head>
 <body>
