--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oncollaboration</title>
-    <link rel="stylesheet" href="/styles-webinars.css">
-    <link rel="stylesheet" href="/stylesheet.css">
+    <link rel="stylesheet" href="/styles/styles-webinars.css">
+    <link rel="stylesheet" href="/styles/stylesheet.css">
 </head>
 <body>
