--- a/views/webinars.liquid
+++ b/views/webinars.liquid
@@ -45,42 +45,8 @@
 
     <div class="divider-webinars"></div>
 
-    <ul class="webinar-cards">
-        {% for webinar in webinars %}
-        <li class="card">
-                <div class="wrapper-card">
-                    <img class="banner" src="https://fdnd-agency.directus.app/assets/{{ webinar.thumbnail }}?width=450&height=338&fit=cover"
-                        alt="{{ webinar.title }}" width="350" height="300">
-                    <p class="duration">{{ webinar.duration }}</p>
-                    <form class="bookmark-webinar-form" method="POST" action="/webinars">
-                        <input type="hidden" name="textField" value="{{ webinar.id }}">
-                        <input type="hidden" name="forField" value="Bookmark webinar">
-                        <button class="bookmark-btn" type="submit">
-                            <span>Add to bookmarks</span>
-                            <img src="/assets-webinars/icon-bookmark.svg" width="15" height="15" alt="">
-                        </button>
-                    </form>
-                </div>
+    {% render "partials/webinar-card.liquid", webinars: webinars %}
 
-                <section class="card-info">
-                    <ul class="categories">
-                        {% for categorie in webinar.categories %}
-                        <li class="category">
-                            <p class="category-label">{{ categorie.avl_categories_id.name }}</p>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                    <h3>{{ webinar.title | truncatewords: 8 }}</h3>
-                    <p class="speaker">
-                        {% for speaker in webinar.speakers %}
-                        {{ speaker.avl_speakers_id.fullname }}
-                        {% endfor %}
-                    </p>
-                    <a href="/webinars/{{ webinar.slug }}">View webinar<img src="/assets-webinars/icon-arrow-right.svg" alt=""></a>
-                </section>
-        </li>
-            {% endfor %}
-    </ul>
 </section>
 
 {% render "partials/foot.liquid" %}
