Button aan bookmark functie gekoppeld webinar #19

--- a/views/webinars.liquid
+++ b/views/webinars.liquid
@@ -45,7 +45,7 @@
 
     <div class="divider-webinars"></div>
 
-    {% render "partials/webinar-card.liquid", webinars: webinars %}
+    {% render "partials/webinar-card.liquid", webinars: webinars, bookmarkIds: bookmarkIds %}
 
 </section>
 
