--- a/views/partials/webinar-card.liquid
+++ b/views/partials/webinar-card.liquid
@@ -6,12 +6,18 @@
                 src="https://fdnd-agency.directus.app/assets/{{ webinar.thumbnail }}?width=450&height=338&fit=cover"
                 alt="{{ webinar.title }}" width="350" height="300">
             <p class="duration">{{ webinar.duration }}</p>
+            {% assign webinarIdString = webinar.id | string | strip %}
             <form class="bookmark-webinar-form" method="POST" action="/webinars">
                 <input type="hidden" name="textField" value="{{ webinar.id }}">
                 <input type="hidden" name="forField" value="Bookmark webinar">
-                <button class="bookmark-btn" type="submit">
+                <button type="submit">
+                    {% if bookmarkIds contains webinarIdString %}
+                    <span>Remove from bookmarks</span>
+                    <img src="/assets-webinars/icon-bookmarked.svg" width="15" height="15" alt="">
+                    {% else %}
                     <span>Add to bookmarks</span>
                     <img src="/assets-webinars/icon-bookmark.svg" width="15" height="15" alt="">
+                    {% endif %}
                 </button>
             </form>
         </div>
