section -> div + button -> a href

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -5,12 +5,12 @@
     <link rel="stylesheet" type="text/css" href="styles/home.css">
 </head>
 
-<section class="home-main">
+<div class="home-main">
 
     <section class="home-about">
         <h1>The platform where Radiotherapists connect and innovate</h1>
         <p>Oncollaboration is a digital platform dedicated to fostering international collaboration and knowledge exchange between radiation oncology professionals in the Netherlands and Indonesia. The platform was established with the aim of building bridges between medical experts, researchers, and healthcare professionals in both countries, working together to improve the quality of cancer care.</p>
-        <button class="button-green">More about Oncollaboration</button>
+        <a href="/about-us" class="green-button">More about Oncollaboration</a>
         <picture>
             <source srcset="assets-home/avl-team.avif" type="image/avif">
             <img src="assets-home/avl-team.jpeg" alt="5 doctors talking to each other" loading="eager" width="380px">
@@ -72,7 +72,7 @@
             One of the main benefits of webinars is accessibility. Participants can join from any location, making it easier for organizations to reach a broader audience. Webinars are also cost-effective, saving time and money for both hosts and attendees.
             In addition, webinars often include interactive features like Q&A sessions, polls, and chat functions, which encourage active participation and enhance the learning experience.
         </p>
-        <button class="button-green">See all webinars</button>
+        <a href="/webinars" class="green-button">See all webinars</a>
     </section>
 
     <section class="home-contourings">
@@ -82,8 +82,8 @@
             Precise contouring ensures that the radiation dose is delivered exactly where it's needed, reducing side effects and improving treatment outcomes. It requires teamwork between radiation oncologists, radiologists, and medical physicists.
             Thanks to advanced imaging and software, contouring has become more accurate, helping patients receive safer and more effective cancer treatment.
         </p>
-        <button class="button-green">See all contourings</button>
+        <a href="/contourings" class="green-button">See all contourings</a>
     </section>
 
-</section>
+</div>
 {% render "partials/foot.liquid" %}
