Squashed commit of the following:
commit 64a6f3c306cb4b34e4b02f55b4044e7de51244c1
Merge: b1a917a 8d66eaa
Author: julia-stevens <juliastevens02@gmail.com>
Date:   Thu May 15 12:30:15 2025 +0200

    Merge pull request #35 from julia-stevens/response-fix

    Kleine issues in server fix

commit 8d66eaad82d7ab97dab49054ac7d69ddc5fd3774
Author: Julia Stevens <juliastevens02@gmail.com>
Date:   Thu May 15 10:25:58 2025 +0200

    #34 issues server fix

commit b1a917a8f3bf7f9123f91292cb5a44d90fc8a1e3
Merge: db0fe04 336bdcb
Author: halie404 <26465999+halie404@users.noreply.github.com>
Date:   Thu May 15 10:09:25 2025 +0200

    Merge pull request #32 from julia-stevens/server-changes

    Server changes

commit 336bdcb2ba7cdf976f82f39fbe6ed229f699a07e
Author: Halima Dinle <26465999+halie404@users.noreply.github.com>
Date:   Wed May 14 14:15:28 2025 +0200

    #29 server aangepast

commit 255903d572255c5f4ae6b0d88de3fad2e190b7c1
Author: Halima Dinle <26465999+halie404@users.noreply.github.com>
Date:   Wed May 14 14:15:06 2025 +0200

    #30 mappen aangepast

commit db0fe04a9f138e333905a32b5b02935620643bb5
Merge: aed6fe5 4432674
Author: AnoukdeRooij24 <anouk.de.rooij@hva.nl>
Date:   Wed May 14 11:27:34 2025 +0200

    Merge pull request #31 from julia-stevens/css-UI-components

    Styling van de links #1

commit 4432674552f834b87e6ffbf1780c1056bc10d2ac
Author: AnoukdeRooij24 <anouk.de.rooij@hva.nl>
Date:   Wed May 14 11:19:55 2025 +0200

    Styling van de links #1

--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -140,5 +140,14 @@ ol {
         transition: 0.2s ease-in-out;
     }
 
-
+/* LINKS */
+a {
+    font-family: var(--font-paragraph);
+    font-size: var(--font-size-md);
+    color: var(--primary-text);
+    text-decoration: none;
+  }
+    a:hover {
+        color: var(--primary-highlight);
+    }
 
