styles toegevoegd in styles

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,4 +3,5 @@
 @import url("footer.css");
 @import url("header.css");
 @import url("speakers.css");
+@import url("speaker-detail.css");
 @import url("webinar-detail.css");
