Home intro styling #3 #52

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -4,12 +4,20 @@
 
     <section class="home-about">
         <h1>The platform where Radiotherapists connect and innovate</h1>
-        <p>Oncollaboration is a digital platform dedicated to fostering international collaboration and knowledge exchange between radiation oncology professionals in the Netherlands and Indonesia. The platform was established with the aim of building bridges between medical experts, researchers, and healthcare professionals in both countries, working together to improve the quality of cancer care.</p>
+
+        <section class="home-about-position">
+
+            <p class="home-about-p">Oncollaboration is a digital platform dedicated to fostering international collaboration and knowledge exchange between radiation oncology professionals in the Netherlands and Indonesia. The platform was established with the aim of building bridges between medical experts, researchers, and healthcare professionals in both countries, working together to improve the quality of cancer care.</p>
+            
+            <picture class="home-about-picture">
+                <source srcset="assets-home/avl-team.avif" type="image/avif">
+                <img src="assets-home/avl-team.jpeg" alt="5 doctors talking to each other" loading="eager" width="360px">
+            </picture>
+
+        </section>
+        
         <a href="/about-us" class="green-button">More about Oncollaboration</a>
-        <picture>
-            <source srcset="assets-home/avl-team.avif" type="image/avif">
-            <img src="assets-home/avl-team.jpeg" alt="5 doctors talking to each other" loading="eager" width="380px">
-        </picture>
+
     </section>
 
     <section class="home-doctors">
