--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,3 +1,42 @@
+/* MARK: ABOUT */
+.home-about {
+    padding: 3em 1em 6em 1em;
+    gap: .5em;
+
+    @media screen and (min-width: 720px) {
+        padding: 5em 8em 10em 8em;
+    }
+
+    .home-about-position {
+        display: flex;
+        flex-direction: column;
+        gap: .5em;
+
+        p {
+            max-width: 80ch;
+            line-height: 1.4em;
+            padding-right: .5em;
+        }
+
+        img {
+            border-radius: var(--border-radius-sm);
+
+            @media (width > 65em) {
+                width: 500px;
+            }
+        }
+    
+        .green-button {
+            margin: 1em 0em 1em 0em;
+        }
+
+        @media (width > 75em) {
+            flex-direction: row;
+        }   
+    }
+}
+
+
 
 .home-doctors {
     background-color: var(--secondary-light);
