--- a/views/index.liquid
+++ b/views/index.liquid
@@ -5,16 +5,16 @@
     <section class="home-about">
         <h1>The platform where Radiotherapists connect and innovate</h1>
 
-        <section class="home-about-position">
+        <div class="home-about-position">
 
-            <p class="home-about-p">Oncollaboration is a digital platform dedicated to fostering international collaboration and knowledge exchange between radiation oncology professionals in the Netherlands and Indonesia. The platform was established with the aim of building bridges between medical experts, researchers, and healthcare professionals in both countries, working together to improve the quality of cancer care.</p>
+            <p>Oncollaboration is a digital platform dedicated to fostering international collaboration and knowledge exchange between radiation oncology professionals in the Netherlands and Indonesia. The platform was established with the aim of building bridges between medical experts, researchers, and healthcare professionals in both countries, working together to improve the quality of cancer care.</p>
             
             <picture class="home-about-picture">
                 <source srcset="assets-home/avl-team.avif" type="image/avif">
                 <img src="assets-home/avl-team.jpeg" alt="5 doctors talking to each other" loading="eager" width="360px">
             </picture>
 
-        </section>
+        </div>
         
         <a href="/about-us" class="green-button">More about Oncollaboration</a>
 
@@ -22,31 +22,46 @@
 
     <section class="home-doctors">
         <h2>Meet our doctors</h2>
-        <p>
-            The doctors at the Antoni van Leeuwenhoek Hospital in Amsterdam are leading experts in cancer treatment and research. They combine advanced medical knowledge with compassionate care, working closely with researchers to provide cutting-edge therapies.
-            At the same time, the doctors of the 's Lands Hospitaal (Sardjo Hospital) in Suriname play a vital role in providing essential healthcare services to their community. They are dedicated professionals who work with limited resources but deliver quality care through commitment and expertise.
-            Both teams share a strong focus on patient-centered care, collaboration, and continuous improvement. Together, they represent the heart of modern and compassionate medicine.
-        </p>
-   
-        <section class="home-team">
-            <div class="home-team-card">
-                <picture>
-                    <source srcset="" type="">
-                    <img src="assets-home/judie-van-driesen.png" alt="" loading="lazy">
-                </picture>
-                <p>Judie van Driesen</p>
-                <p>Radiation oncologist</p>
-            </div> 
 
-            <div class="home-team-card">
-                <picture>
-                    <source srcset="" type="">
-                    <img src="assets-home/judie-van-driesen.png" alt="" loading="lazy">
-                </picture>
-                <p>Judie van Driesen</p>
-                <p>Radiation oncologist</p>
-            </div> 
-        </section>   
+        <div class="home-doctors-position">
+
+            <p class="home-doctors-p">
+                The doctors at the Antoni van Leeuwenhoek Hospital in Amsterdam are leading experts in cancer treatment and research. They combine advanced medical knowledge with compassionate care, working closely with researchers to provide cutting-edge therapies.
+                At the same time, the doctors of the 's Lands Hospitaal (Sardjo Hospital) in Suriname play a vital role in providing essential healthcare services to their community. They are dedicated professionals who work with limited resources but deliver quality care through commitment and expertise.
+                Both teams share a strong focus on patient-centered care, collaboration, and continuous improvement. Together, they represent the heart of modern and compassionate medicine.
+            </p>
+    
+            <div class="home-team">
+                
+                <div class="home-team-card">
+                    <picture>
+                        <source srcset="" type="">
+                        <img src="assets-home/judie-van-driesen.png" alt="" loading="lazy">
+                    </picture>
+                    <p>Judie van Driesen</p>
+                    <p>Radiation oncologist</p>
+                </div> 
+
+                <div class="home-team-card">
+                    <picture>
+                        <source srcset="" type="">
+                        <img src="assets-home/judie-van-driesen.png" alt="" loading="lazy">
+                    </picture>
+                    <p>Judie van Driesen</p>
+                    <p>Radiation oncologist</p>
+                </div>
+
+                <div class="home-team-card">
+                    <picture>
+                        <source srcset="" type="">
+                        <img src="assets-home/judie-van-driesen.png" alt="" loading="lazy">
+                    </picture>
+                    <p>Judie van Driesen</p>
+                    <p>Radiation oncologist</p>
+                </div>
+
+            </div>
+        </div>   
     </section>
 
     <section class="home-partners">
