--- a/views/index.liquid
+++ b/views/index.liquid
@@ -66,19 +66,21 @@
 
     <section class="home-partners">
         <h2>A Global Partnership</h2>
-        <p>
-            Partnership is essential for sharing information about different types of cancer because it promotes collaboration among researchers, healthcare professionals, and institutions worldwide. By working together, they can pool knowledge, compare findings, and develop a more comprehensive understanding of cancer.
-            This collaboration leads to faster breakthroughs in treatment, earlier diagnosis, and more effective prevention strategies. Furthermore, partnerships help reduce duplication of effort and ensure that valuable data and insights are accessible to everyone involved in cancer care and research, ultimately improving outcomes for patients globally.
-        </p>
+        <div class="home-partners-postion">
+            <p>
+                Partnership is essential for sharing information about different types of cancer because it promotes collaboration among researchers, healthcare professionals, and institutions worldwide. By working together, they can pool knowledge, compare findings, and develop a more comprehensive understanding of cancer.
+                This collaboration leads to faster breakthroughs in treatment, earlier diagnosis, and more effective prevention strategies. Furthermore, partnerships help reduce duplication of effort and ensure that valuable data and insights are accessible to everyone involved in cancer care and research, ultimately improving outcomes for patients globally.
+            </p>
 
-        <div class="scroller">
-            <div class="scroller-content">
-                <img src="assets-home/logo1.png" alt="Logo Universitas Gadjah Mada" width="160" height="160">
-                <img src="assets-home/logo2.png" alt="Logo Departemen Kesahatan R.I." width="160" height="160">
-                <img src="assets-home/logo3.png" alt="Logo IDGNH" width="160" height="160">
-                <img src="assets-home/logo4.png" alt="Logo Nederlandse Vereniging voor Radiotherapie en Oncologie" width="160" height="160">
-                <img src="assets-home/logo5.png" alt="Logo Amsterdam UMC" width="160" height="160">
-                <img src="assets-home/logo6.svg" alt="Logo Antoni van Leeuwenhoek" width="160" height="160">
+            <div class="scroller">
+                <div class="scroller-content">
+                    <img src="assets-home/logo1.png" alt="Logo Universitas Gadjah Mada" width="160" height="160">
+                    <img src="assets-home/logo2.png" alt="Logo Departemen Kesahatan R.I." width="160" height="160">
+                    <img src="assets-home/logo3.png" alt="Logo IDGNH" width="160" height="160">
+                    <img src="assets-home/logo4.png" alt="Logo Nederlandse Vereniging voor Radiotherapie en Oncologie" width="160" height="160">
+                    <img src="assets-home/logo5.png" alt="Logo Amsterdam UMC" width="160" height="160">
+                    <img src="assets-home/logo6.svg" alt="Logo Antoni van Leeuwenhoek" width="160" height="160">
+                </div>
             </div>
         </div>
     </section>
